fixing styling and adding material ui package but its off center

--- a/src/milestones/milestone.css
+++ b/src/milestones/milestone.css
@@ -5,40 +5,39 @@ html {
   margin: 0;
   padding: 0;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-size: 50px;
+  font-size: 20px;
 }
 .first-row {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
-  height: 100px;
+  height: 0px;
   background-color: white;
   color: rgb(125, 56, 56);
 }
 .second-row {
-  position: absolute;
-  text-align: center;
-  top: 150px;
+  position: relative;
+  top: 50px;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: rgb(125, 56, 56);
 }
 .second-row iframe {
-  padding-left: 150px;
-  padding-top: 100px;
-  width: 100vh;
-  height: 70%;
+  padding-top: 20px;
+  /* display: block; */
+  width: 100%;
+  height: 100vh;
   border-bottom: none;
   border-left: none;
   border-right: none;
   border-top: none;
 }
 
-.nav-link-wrapper {
+/* .nav-link-wrapper {
   text-align: center;
   padding-top: 420px;
   font-size: 100px;
   background-color: black;
-}
+} */
